added link to website

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1 id="title">Sandbox Survey Form</h1>
     <p id="description">
-      Fill out this survey for the upcoming Sandbox Developer application on May 30th!</p>
+      Fill out this survey for the upcoming <a href="https://www.sandboxnu.com/apply">Sandbox Developer application</a> on May 30th!</p>
       <hr>
       <form id="survey-form">
         <fieldset>
@@ -28,7 +28,6 @@
           <input name="end" type="radio" value="back" class="inline">Back-End Developer</input>
           </label>
 </fieldset>
-
 <fieldset>
   <input class="inline" value="course" type="checkbox">Fundies 1
   </input>
